--- a/questions/1.md
+++ b/questions/1.md
@@ -6,7 +6,7 @@
 ```
 s := "Hello, " + "world!"
 ```
-# strings.Join:
+# strings.Join
 Рекомендуется для конкатенации нескольких строк или когда строки хранятся в слайсе.
 Более эффективен, так как заранее выделяет память под итоговую строку.\
 ```
@@ -15,7 +15,7 @@ import "strings"
 parts := []string{"Hello", "world", "!"}
 s := strings.Join(parts, " ")
 ```
-# bytes.Buffer:
+# bytes.Buffer
 Подходит для динамической конкатенации строк в цикле.
 Эффективен благодаря минимизации аллокаций памяти.
 ```
@@ -28,7 +28,7 @@ buffer.WriteString("Hello, ")
 buffer.WriteString("world!")
 s := buffer.String()
 ```
-# strings.Builder:
+# strings.Builder
 Появился в Go 1.10.
 Оптимизирован для конкатенации строк, похож на bytes.Buffer, но специально предназначен для работы со строками.
 **Наиболее эффективный способ для конкатенации большого числа строк.**
