--- a/questions/1.md
+++ b/questions/1.md
@@ -8,7 +8,7 @@ s := "Hello, " + "world!"
 ```
 # strings.Join
 Рекомендуется для конкатенации нескольких строк или когда строки хранятся в слайсе.
-Более эффективен, так как заранее выделяет память под итоговую строку.\
+Более эффективен, так как заранее выделяет память под итоговую строку.
 ```
 import "strings"
 
@@ -28,8 +28,7 @@ buffer.WriteString("Hello, ")
 buffer.WriteString("world!")
 s := buffer.String()
 ```
-# strings.Builder
-Появился в Go 1.10.
+# strings.Builder (Самый эффективный для большого числа строк)
 Оптимизирован для конкатенации строк, похож на bytes.Buffer, но специально предназначен для работы со строками.
 **Наиболее эффективный способ для конкатенации большого числа строк.**
 ```
