--- a/questions/3.md
+++ b/questions/3.md
@@ -4,18 +4,14 @@
 `sync.Mutex` (мьютекс) является простым механизмом блокировки, который позволяет одному горутину получить эксклюзивный доступ к разделяемому ресурсу. Он используется в случаях, когда требуется предотвратить одновременный доступ к ресурсу, чтобы избежать гонок данных.
 
 ## Основные методы:
-`Lock()`: блокирует мьютекс. Если мьютекс уже заблокирован, вызывающий горутин будет ожидать его освобождения.
-
-`Unlock()`: разблокирует мьютекс. Если есть другие горутины, ожидающие разблокировки, одна из них получит доступ.
+- `Lock()`: блокирует мьютекс. Если мьютекс уже заблокирован, вызывающий горутин будет ожидать его освобождения.
+- `Unlock()`: разблокирует мьютекс. Если есть другие горутины, ожидающие разблокировки, одна из них получит доступ.
 
 # sync.RWMutex
 `sync.RWMutex` (разделяемый/эксклюзивный мьютекс) предоставляет более сложный механизм блокировки, который позволяет различать чтение и запись. Он позволяет множеству горутин одновременно читать данные, но только одной горутине выполнять запись. Это полезно в случаях, когда чтение данных гораздо чаще, чем их запись.
 
 ## Основные методы:
-`RLock()`: блокирует мьютекс для чтения. Множество горутин могут одновременно получать блокировку для чтения.
-
-`RUnlock()`: разблокирует мьютекс для чтения.
-
-`Lock()`: блокирует мьютекс для записи. Если мьютекс заблокирован для чтения или другой записи, вызывающий горутин будет ожидать.
-
-`Unlock()`: разблокирует мьютекс для записи.
+- `RLock()`: блокирует мьютекс для чтения. Множество горутин могут одновременно получать блокировку для чтения.
+- `RUnlock()`: разблокирует мьютекс для чтения.
+- `Lock()`: блокирует мьютекс для записи. Если мьютекс заблокирован для чтения или другой записи, вызывающий горутин будет ожидать.
+- `Unlock()`: разблокирует мьютекс для записи.
