--- a/questions/9.md
+++ b/questions/9.md
@@ -1,47 +1,47 @@
 # Задание слайсов
 1. Использование встроенной функции make:
-```
+```go
 s := make([]int, 5) // Создает слайс типа []int длиной 5 и емкостью 5
 ```
 2. Инициализация литералом:
-```
+```go
 s := []int{1, 2, 3, 4, 5} // Создает и инициализирует слайс значениями
 ```
 3. Срез существующего массива:
-```
+```go
 arr := [5]int{1, 2, 3, 4, 5}
 s := arr[1:4] // Создает слайс из элементов массива arr с индексами от 1 до 3
 ```
 4. Срез существующего слайса:
-```
+```go
 original := []int{1, 2, 3, 4, 5}
 s := original[1:4] // Создает новый слайс из элементов с индексами от 1 до 3
 ```
 5. Использование пустого слайса:
-```
+```go
 var s []int // nil-слайс, не инициализированный
 ```
 6. Использование встроенной функции new:
-```
+```go
 p := new([]int) // Создает указатель на nil-слайс
 *p = make([]int, 5) // Инициализирует слайс через указатель
 s := *p // Получаем инициализированный слайс
 ```
-# Задание мап
+# Задание map
 1. Использование встроенной функции make:
-```
+```go
 m := make(map[string]int) // Создает пустую мапу с ключами типа string и значениями типа int
 ```
 2. Инициализация литералом:
-```
+```go
 m := map[string]int{"one": 1, "two": 2, "three": 3} // Создает и инициализирует мапу значениями
 ```
 3. Использование пустой map:
-```
+```go
 var m map[string]int // nil-мапа, не инициализированная
 ```
 4. Использование встроенной функции new:
-```
+```go
 p := new(map[string]int) // Создает указатель на nil-мапу
 *p = make(map[string]int) // Инициализирует мапу через указатель
 m := *p // Получаем инициализированную мапу
