--- a/questions/11.md
+++ b/questions/11.md
@@ -20,7 +20,7 @@ func main() {
 }
 ```
 
-Эта программа приведет к ошибке
+Эта программа выведет все целые значения от 0 до 4 в неопределенном порадке из-за конкурентности, а затем приведет к ошибке:
 ```
 fatal error: all goroutines are asleep - deadlock!
 
@@ -33,8 +33,10 @@ main.main()
         /media/george/part/sideprojects/go/go_practice/questions/main.go:17 +0xa5
 exit status 2
 ```
+# Вывод
+Вывод произойдет, потому что мы в цикле `for` создаем го рутины, в которых производим вывод переданного числа. Порядок вывода не определен из-за конкурентного выполнения созданных го рутин.
+# Причина ошибки
 Программа создает 5 го рутин и пытается использовать `sync.WaitGroup{}` для того чтобы дождаться выполнения всех го рутин. Для этого в цикле вызывается `wg.Add(1)`, чтобы дать знать `wg` о том, что количество рутин увеличивается. После этого, когда выполнение программы дойдет до `wg.Wait()`, то программа будет ждать пока все рутины выполнятся.
 Но в сами го рутины мы передаем не исходный объект `wg`, а его копию, что приводит к тому, что вызов `wg.Done()` не дает знать `wg` в `main` о том, что рутина завершилась - меняется только копия `wg` в го рутине.
-Произойдет это потому что wg передается в функцию по значению, а 
 
-В результате, `wg.Wait()` в функции `main` будет вечно ожидать окончания го рутин.
+В результате, `wg.Wait()` в функции `main` будет вечно ожидать окончания го рутин, что и приведет к ошибке.
