--- a/questions/13.md
+++ b/questions/13.md
@@ -22,7 +22,7 @@ func main() {
 
 # Пояснение:
 1. В `main`, мы объявляем слайс `a` и инициализируем его значениями `[]int8{1, 2, 3, 4, 5}`.
-2. Емкость этого массива 5 - и определяется при определении слайса.
+2. Емкость этого слайса 5 - и определяется при определении слайса.
 3. Затем вызываем функцию `someAction`, передавая `a` и `6` в качестве аргументов.
 4. В функции `someAction`, первое действие — это присвоение значения `100` первому элементу слайса `v` (который ссылается на тот же слайс, что и `a`).
 5. В результате слайс, на который указывает слайс `a` в `main`, теперь выглядит так: `[100 2 3 4 5]`.
