--- a/questions/14.md
+++ b/questions/14.md
@@ -64,7 +64,7 @@ func(slice []string) {
   ```go
   fmt.Print(slice)
   ```
-  После выхода из анонимной функции, оригинальный слайс остается неизменным, так как присваивание нового значения слайсу внутри функции не изменяет сам исходный слайс, а создает новый слайс. Оригинальный слайс остается со значениями `["a", "a"]`, поэтому будет выведено: `[a a]`.
+  После выхода из анонимной функции, оригинальный слайс остается неизменным, так как присваивание нового значения слайсу внутри функции не изменяет исходный слайс, а создает новый слайс. Оригинальный слайс остается со значениями `["a", "a"]`, поэтому будет выведено: `[a a]`.
 
 # Итог
 - Анонимная функция изменяет только локальную копию слайса, созданную при передаче параметра.
